# test_26_12

./: README.md  main.py  pyproject.toml
test_26_12/: task1.py  task2.py  task3.py
