[tool.poetry]
name = "test-26-12"
version = "0.1.0"
description = ""
authors = ["dichenk"]
readme = "README.md"
packages = [{include = "test_26_12"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main_run = 'main:main'
